[package]
name = "rusty_api_xenom"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0" # Replace with the latest version
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24.0" # Replace with the latest version
serde = { version = "1", features = ["derive"] }
kaspa-hashes = { version = "0.15.2", git = "https://github.com/hainakus/Xenomorph.git", branch = "main" }
kaspa-wrpc-client = { version = "0.15.2", git = "https://github.com/hainakus/Xenomorph.git", branch = "main" }
kaspa-rpc-core = { version = "0.15.2", git = "https://github.com/hainakus/Xenomorph.git", branch = "main" }
kaspa-grpc-core = { version = "0.15.2", git = "https://github.com/hainakus/Xenomorph.git", branch = "main" }
kaspa-grpc-client = { version = "0.15.2", git = "https://github.com/hainakus/Xenomorph.git", branch = "main" }
kaspa-p2p-lib = { version = "0.15.2", git = "https://github.com/hainakus/Xenomorph.git", branch = "main" }
kaspa-consensus-core = { version = "0.15.2", git = "https://github.com/hainakus/Xenomorph.git", branch = "main" }
serde_json = "1.0"
futures-util = "0.3.31"
anyhow = "1.0.89"
chrono = "0.4.38"
actix-cors = "0.7.0"