[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.40.0"
tokio-tungstenite = "0.24.0"
futures-util = "0.3.31"
serde_json = "1.0.128"
kaspa-grpc-core = { version = "0.15.2", git = "https://github.com/hainakus/Xenomorph.git", branch = "main" }
kaspa-wrpc-client = { version = "0.15.2", git = "https://github.com/hainakus/Xenomorph.git", branch = "main" }
actix-web = "4.0"
anyhow = "1.0.89"
log = "0.4.22" # Replace with the latest version